# cattle

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
cattle/: cattle.py  cattle_cli.py  cattle_remote.py  test_cattle.py
cattle/facility/: facility.py  file.py  system.py
example/flaky/: __cattle__.py  cattle.py
example/poem/: __cattle__.py  cattle.py  poem.cattle  poem.txt
