[tool.poetry]
name = "cattle"
version = "0.1.0dev"
description = "Cattle: the server configurer."
authors = ["David Grant <seizethedave@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
paramiko = "^3.4.0"
scp = "^0.14.5"

[tool.poetry.scripts]
cattle = "cattle.cattle_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
